--- a/JavaScriptCore/shell/CMakeLists.txt
+++ b/JavaScriptCore/shell/CMakeLists.txt
@@ -18,6 +18,7 @@ endif ()
 
 WEBKIT_INCLUDE_CONFIG_FILES_IF_EXISTS()
 
+
 WEBKIT_WRAP_SOURCELIST(${JSC_SOURCES})
 include_directories(./ ${JavaScriptCore_INCLUDE_DIRECTORIES})
 add_executable(jsc ${JSC_SOURCES})
@@ -27,6 +28,11 @@ set_target_properties(jsc PROPERTIES FOLDER "JavaScriptCore")
 if (JSC_OUTPUT_NAME)
     set_target_properties(jsc PROPERTIES OUTPUT_NAME ${JSC_OUTPUT_NAME})
 endif ()
+
+# JSCPOLLY BEGIN
+target_link_libraries(jsc "gomp")
+ADD_TARGET_PROPERTIES(jsc LINK_FLAGS "-Wl,--no-as-needed" )
+# JSCPOLLY END
 
 if (JSC_LINK_FLAGS)
     ADD_TARGET_PROPERTIES(jsc LINK_FLAGS "${JSC_LINK_FLAGS}")
