More JSCPOLLY macros and bug fixe in cmakelist

--- a/JavaScriptCore/CMakeLists.txt
+++ b/JavaScriptCore/CMakeLists.txt
@@ -1325,6 +1325,7 @@ set_target_properties(JavaScriptCore PROPERTIES FOLDER "JavaScriptCore")
 if(ENABLE_FTL_JIT_POLLY)
   message ("POLLLLLLLLLLLLLLLLLLLLLLLLLYYYYYYYYYYYYYY")
   target_compile_definitions(JavaScriptCore PRIVATE "JSCPOLLY")
+  target_compile_definitions(llvmForJSC PRIVATE "JSCPOLLY")
 endif()
 
 if (JavaScriptCore_POST_BUILD_COMMAND)
